--- a/resume2.html
+++ b/resume2.html
@@ -18,14 +18,14 @@
           </p> 
 
           <img src="images/profilePhoto.jpg" alt="A head shot picture of Denelle" height="500px" width="350px">
-
+<nav>
           <ul> 
             <li><a href="#Education">Education</a></li>
             <li><a href="#Experience">Experience</a></li>
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#Contact Details">Contact Details</a></li>
           </ul>
-  
+        </nav>
         <h2 id="Education">Education</h2>
         
         <H3>Intro to Web </H3>
